finish order detals & orders reply

--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -32,8 +32,8 @@
     "An error occurred while saving ticket": "An error occurred while saving ticket",
     "An error occurred while saving ticket reply": "An error occurred while saving ticket reply",
     "app name": "اسم التطبيق",
-    "app url": "عنوان التطبيق",
     "App url": "عنوان التطبيق",
+    "app url": "عنوان التطبيق",
     "Appearance": "المظهر",
     "Apr": "أبريل",
     "Are you sure you want to delete the branches?": "Are you sure you want to delete the branches?",
@@ -41,6 +41,7 @@
     "Are you sure you want to delete the department?": "هل أنت متأكد أنك تريد حذف القسم؟",
     "Are you sure you want to delete the label?": "هل أنت متأكد أنك تريد حذف العلامة؟",
     "Are you sure you want to delete the language?": "هل أنت متأكد أنك تريد حذف اللغة؟",
+    "Are you sure you want to delete the selected orders?": "Are you sure you want to delete the selected orders?",
     "Are you sure you want to delete the selected tickets?": "هل أنت متأكد أنك تريد حذف التذاكر المحددة؟",
     "Are you sure you want to delete the ticket?": "هل أنت متأكد أنك تريد حذف التذكرة؟",
     "Are you sure you want to delete the user role?": "هل أنت متأكد أنك تريد حذف دور المستخدم؟",
@@ -55,15 +56,16 @@
     "background": "الخلفية",
     "body": "لب الموضوع",
     "Body": "لب الموضوع",
+    "Branch": "Branch",
     "Branche": "Branche",
-    "Branches": "Branches",
     "branches": "branches",
-    "Branches agents": "Branches agents",
+    "Branches": "Branches",
     "branches agents": "branches agents",
-    "Branches details": "Branches details",
+    "Branches agents": "Branches agents",
     "branches details": "branches details",
-    "Branches details and settings": "Branches details and settings",
+    "Branches details": "Branches details",
     "branches details and settings": "branches details and settings",
+    "Branches details and settings": "Branches details and settings",
     "Can not delete a default role": "لا يمكن حذف الدور الافتراضي",
     "Can not edit your user from the user manager, go to your account page": "لا يمكن تعديل مستخدمك من مدير المستخدمين، انتقل إلى صفحة حسابك",
     "Can\\'t delete default language": "لا يمكن حذف اللغة الافتراضية",
@@ -79,8 +81,8 @@
     "Change your password for a new one, valid for the next login": "قم بتغيير كلمة المرور الخاصة بك إلى واحدة جديدة، صالحة للمرة القادمة التسجيل",
     "Close": "إغلاق",
     "Closed at": "أغلق في",
-    "color": "اللون",
     "Color": "اللون",
+    "color": "اللون",
     "Configure captcha settings & preferences": "تكوين إعدادات وتفضيلات رمز التحقق",
     "Configure general site settings": "تكوين إعدادات الموقع العامة",
     "Configure localization settings for the site": "تكوين إعدادات الموقع للتطبيق",
@@ -93,8 +95,8 @@
     "Confirmation of your account registration": "تأكيد تسجيل حسابك",
     "Create account": "إنشاء حساب",
     "Create branche": "Create branche",
-    "Create Branches": "Create Branches",
     "Create branches": "Create branches",
+    "Create Branches": "Create Branches",
     "Create canned reply": "إنشاء رد محفوظ",
     "Create department": "إنشاء قسم",
     "Create label": "إنشاء علامة",
@@ -105,22 +107,22 @@
     "Create user role": "إنشاء دور مستخدم",
     "Created at": "إنشاء في",
     "Current password": "كلمة المرور",
-    "customer": "عميل",
     "Customer": "عميل",
+    "customer": "عميل",
     "Dashboard": "لوحة التحكم",
     "dashboard access": "الوصول الى لوحة التحكم",
     "Dashboard access": "الوصول الى لوحة التحكم",
     "Data deleted successfully": "تم حذف البيانات بنجاح",
     "Data saved correctly": "تم حفظ البيانات بشكل صحيح",
     "Data updated correctly": "تم تحديث البيانات بشكل صحيح",
-    "date format": "تنسيق التاريخ",
     "Date format": "تنسيق التاريخ",
-    "date locale": "لغة التاريخ",
+    "date format": "تنسيق التاريخ",
     "Date locale": "لغة التاريخ",
+    "date locale": "لغة التاريخ",
     "Dec": "ديسمبر",
     "Default format for dates on the site": "التنسيق الافتراضي للتواريخ على الموقع",
-    "Default role": "الدور الافتراضي",
     "default role": "الدور الافتراضي",
+    "Default role": "الدور الافتراضي",
     "Define the description of the application to improve SEO positioning": "تحديد وصف التطبيق لتحسين ترتيب محركات البحث",
     "Define the keywords of the application to improve SEO positioning": "تحديد الكلمات الرئيسية للتطبيق لتحسين ترتيب محركات البحث",
     "Define the title of the application\\' home page to improve SEO positioning": "تحديد عنوان صفحة البداية لتطبيق لتحسين ترتيب محركات البحث",
@@ -129,6 +131,7 @@
     "Delete department": "حذف القسم",
     "Delete label": "حذف التسمية",
     "Delete language": "حذف اللغة",
+    "Delete orders": "Delete orders",
     "Delete ticket": "حذف التذكرة",
     "Delete tickets": "حذف التذاكر",
     "Delete user": "حذف المستخدم",
@@ -156,21 +159,21 @@
     "Edit status": "تحرير الحالة",
     "Edit user": "تحرير المستخدم",
     "Edit user role": "تحرير دور المستخدم",
-    "Email": "البريد الإلكتروني",
     "email": "البريد الإلكتروني",
+    "Email": "البريد الإلكتروني",
     "Enter the translated string": "أدخل السلسلة المترجمة",
     "Error": "خطأ",
     "Feb": "فبراير",
     "file": "ملف",
     "Filters": "تصفية",
     "Forbidden": "ممنوع",
-    "force https": "فرض HTTPS",
     "Force HTTPS": "فرض HTTPS",
+    "force https": "فرض HTTPS",
     "Force the loading of the site using HTTPS, to improve the security and SEO positioning of the site": "فرض تحميل الموقع باستخدام HTTPS، لتحسين الأمان وترتيب محركات البحث للموقع",
-    "from address": "عنوان المرسل",
     "From address": "عنوان المرسل",
-    "from name": "اسم المرسل",
+    "from address": "عنوان المرسل",
     "From name": "اسم المرسل",
+    "from name": "اسم المرسل",
     "General": "عام",
     "Go home": "الذهاب إلى الصفحة الرئيسية",
     "Hello!": "!مرحبًا",
@@ -179,8 +182,8 @@
     "Hi": "مرحبًا",
     "Home page title": "عنوان صفحة البداية",
     "home title": "عنوان الصفحة الرئيسية",
-    "icon": "أيقونة",
     "Icon": "أيقونة",
+    "icon": "أيقونة",
     "If the branches is public, it allows users to select this branches when creating the ticket, otherwise only agents can reassign to this branches": "If the branches is public, it allows users to select this branches when creating the ticket, otherwise only agents can reassign to this branches",
     "If the department is public, it allows users to select this department when creating the ticket, otherwise only agents can reassign to this department": "إذا كان القسم عامًا، فإنه يسمح للمستخدمين باختيار هذا القسم عند إنشاء التذكرة، وإلا فإن الوكلاء فقط يمكنهم إعادة التعيين إلى هذا القسم",
     "If you did not request a password reset, no further action is required": "إذا لم تطلب إعادة تعيين كلمة المرور، لا يلزم اتخاذ أي إجراء إضافي",
@@ -205,8 +208,8 @@
     "List of agents assigned to the department": "قائمة الوكلاء المعينين إلى القسم",
     "List of supported format can be found": "يمكن العثور على قائمة الصيغ المعتمدة",
     "List of supported timezones can be found": "يمكن العثور على قائمة المناطق الزمنية المعتمدة",
-    "locale": "المنطقة",
     "Locale": "المنطقة",
+    "locale": "المنطقة",
     "Localization": "الموقع",
     "Log (Email will be saved to error log)": "سجل (سيتم حفظ البريد الإلكتروني في سجل الأخطاء)",
     "Logging": "تسجيل الدخول",
@@ -222,8 +225,8 @@
     "My Orders": "My Orders",
     "My orders": "My orders",
     "My tickets": "تذاكري",
-    "Name": "اسم",
     "name": "اسم",
+    "Name": "اسم",
     "New order": "New order",
     "New Order": "New Order",
     "New order assigned to branch": "New order assigned to branch",
@@ -249,18 +252,21 @@
     "order assigned to the selected department": "order assigned to the selected department",
     "Order body": "Order body",
     "order created successfully": "order created successfully",
+    "Order details": "Order details",
     "order priority has been changed": "order priority has been changed",
+    "Order summary": "Order summary",
+    "Orderes": "Orderes",
     "Orders": "الطلبيات",
     "orders assigned to the selected agent": "orders assigned to the selected agent",
     "orders assigned to the selected department": "orders assigned to the selected department",
     "Outgoing mail": "البريد الصادر",
     "Outgoing mail method": "طريقة البريد الصادر",
-    "Password": "كلمة المرور",
     "password": "كلمة المرور",
+    "Password": "كلمة المرور",
     "Password changed successfully": "تم تغيير كلمة المرور بنجاح",
     "Pending tickets": "التذاكر المعلقة",
-    "Permissions": "الصلاحيات",
     "permissions": "الصلاحيات",
+    "Permissions": "الصلاحيات",
     "Personal information": "المعلومات الشخصية",
     "Pick a color": "اختر لونًا",
     "Previous": "السابق",
@@ -288,8 +294,8 @@
     "results": "نتائج",
     "Return to orders list": "Return to orders list",
     "Return to tickets list": "الرجوع إلى قائمة التزاكر",
-    "Role": "دور المستخدم",
     "role": "دور المستخدم",
+    "Role": "دور المستخدم",
     "Role details": "تفاصيل الدور",
     "Role that is assigned to a user on the registration page": "دور يتم تعيينه لمستخدم على صفحة التسجيل",
     "Save": "حفظ",
@@ -304,8 +310,8 @@
     "Send account recovery email": "إرسال بريد إلكتروني لاستعادة الحساب",
     "Send reply": "إرسال رد",
     "SendMail": "إرسال البريد",
-    "Sentry DSN": "Sentry DSN",
     "sentry dsn": "sentry dsn",
+    "Sentry DSN": "Sentry DSN",
     "SEO": "تحسين محركات البحث",
     "Sept": "سبتمبر",
     "Session closed successfully": "تم إغلاق الجلسة بنجاح",
@@ -335,8 +341,8 @@
     "Status details and customization": "تفاصيل الحالة والتخصيص",
     "Statuses": "حالات",
     "strings": "سلاسل",
-    "Subject": "الموضوع",
     "subject": "الموضوع",
+    "Subject": "الموضوع",
     "Success": "نجاح",
     "Synchronize translations": "مزامنة الترجمات",
     "The :attribute confirmation does not match": ":attribute التأكيد غير متطابق",
@@ -390,6 +396,7 @@
     "This action is unauthorized": "هذا الإجراء غير مصرح به",
     "This information will be displayed publicly": "سيتم عرض هذه المعلومات علنًا",
     "This information will be displayed publicly so be careful what you share": "ستتم عرض هذه المعلومات علانية لذا كن حذرًا بما تشاركه",
+    "This order has no conversations": "This order has no conversations",
     "This ticket has no conversations": "هذه التذكرة ليست بها محادثات",
     "Ticket assigned to the selected agent": "تم تعيين التذكرة للوكيل المحدد",
     "Ticket assigned to the selected department": "تم تعيين التذكرة للقسم المحدد",
@@ -422,19 +429,19 @@
     "User details": "تفاصيل المستخدم",
     "User is activated": "المستخدم مفعّل",
     "User is disabled": "المستخدم معطل",
-    "user registration": "تسجيل المستخدم",
     "User registration": "تسجيل المستخدم",
+    "user registration": "تسجيل المستخدم",
     "User registration is disabled": "تم تعطيل تسجيل المستخدم",
     "User registration is enabled": "تم تمكين تسجيل المستخدم",
-    "user roles": "أدوار المستخدم",
     "User roles": "أدوار المستخدم",
+    "user roles": "أدوار المستخدم",
     "User settings": "إعدادات المستخدم",
     "Users": "المستخدمون",
     "Users will have access to the dashboard": "المستخدمون سيكون لديهم الوصول إلى لوحة التحكم",
     "Users will not have access to the dashboard": "المستخدمون لن يكون لديهم الوصول إلى لوحة التحكم",
     "Users with access to the dashboard will automatically redirect to the start of the dashboard, otherwise, they will not be able to access the dashboard, they will only have access to the helpdesk": "المستخدمون الذين لديهم الوصول إلى لوحة التحكم سيتم توجيههم تلقائيًا إلى بداية لوحة التحكم وإلا فلن يكون بإمكانهم الوصول إلى لوحة التحكم, وسيكون لديهم فقط الوصول إلى مكتب المساعدة",
-    "Value": "القيمة",
     "value": "القيمة",
+    "Value": "القيمة",
     "Visibility": "الوضوح",
     "We confirm that you have successfully registered on our website, you can access using the following link": "نؤكد أنك قد سجلت بنجاح على موقعنا، يمكنك الوصول باستخدام الرابط التالي",
     "We couldn\\'t find what you were looking for": "لم نتمكن من العثور على ما كنت تبحث عنه",
