--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -198,8 +198,8 @@
     "If you’re having trouble clicking the &quot;:actionText&quot; button, copy and paste the URL into your web browser": "If you’re having trouble clicking the &quot;:actionText&quot; button, copy and paste the URL into your web browser",
     "In order to view the order you have to log in with your email and password, if you do not remember the password, you can reset it using the email account that this message has reached": "In order to view the order you have to log in with your email and password, if you do not remember the password, you can reset it using the email account that this message has reached",
     "In order to view the ticket you have to log in with your email and password, if you do not remember the password, you can reset it using the email account that this message has reached": "In order to view the ticket you have to log in with your email and password, if you do not remember the password, you can reset it using the email account that this message has reached",
-    "Item": "Item",
     "item": "item",
+    "Item": "Item",
     "Item Name": "Item Name",
     "item_count": "item_count",
     "Items per page": "Items per page",
@@ -219,8 +219,8 @@
     "List of agents assigned to the department": "List of agents assigned to the department",
     "List of supported format can be found": "List of supported format can be found",
     "List of supported timezones can be found": "List of supported timezones can be found",
-    "Locale": "Locale",
     "locale": "locale",
+    "Locale": "Locale",
     "Localization": "Localization",
     "Log (Email will be saved to error log)": "Log (Email will be saved to error log)",
     "Logging": "Logging",
@@ -279,14 +279,14 @@
     "password": "password",
     "Password changed successfully": "Password changed successfully",
     "Pending orders": "Pending orders",
-    "permissions": "permissions",
     "Permissions": "Permissions",
+    "permissions": "permissions",
     "Personal information": "Personal information",
     "Pick a color": "Pick a color",
     "Previous": "Previous",
     "Priorities": "Priorities",
-    "Priority": "Priority",
     "priority": "priority",
+    "Priority": "Priority",
     "Priority details": "Priority details",
     "Priority details and customization": "Priority details and customization",
     "Quick action not found": "Quick action not found",
@@ -322,6 +322,7 @@
     "Select an option": "Select an option",
     "Selected": "Selected",
     "Selected locale must be installed on the operating system": "Selected locale must be installed on the operating system",
+    "Send": "Send",
     "Send account recovery email": "Send account recovery email",
     "Send Order": "Send Order",
     "Send reply": "Send reply",
@@ -357,8 +358,8 @@
     "Status details and customization": "Status details and customization",
     "Statuses": "Statuses",
     "strings": "strings",
-    "Subject": "Subject",
     "subject": "subject",
+    "Subject": "Subject",
     "Success": "Success",
     "Synchronize translations": "Synchronize translations",
     "The :attribute confirmation does not match": "The :attribute confirmation does not match",
@@ -444,12 +445,12 @@
     "User details": "User details",
     "User is activated": "User is activated",
     "User is disabled": "User is disabled",
-    "user registration": "user registration",
     "User registration": "User registration",
+    "user registration": "user registration",
     "User registration is disabled": "User registration is disabled",
     "User registration is enabled": "User registration is enabled",
-    "User roles": "User roles",
     "user roles": "user roles",
+    "User roles": "User roles",
     "User settings": "User settings",
     "Users": "Users",
     "Users will have access to the dashboard": "Users will have access to the dashboard",
