--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -15,6 +15,7 @@
     "Agents": "Agents",
     "agents": "agents",
     "All agents": "All agents",
+    "All Brands": "All Brands",
     "All data will be permanently removed": "All data will be permanently removed",
     "All Orders": "All Orders",
     "All outgoing application emails will be sent from this email address": "All outgoing application emails will be sent from this email address",
@@ -35,11 +36,12 @@
     "An error occurred while saving ticket": "An error occurred while saving ticket",
     "An error occurred while saving ticket reply": "An error occurred while saving ticket reply",
     "app name": "app name",
-    "app url": "app url",
     "App url": "App url",
+    "app url": "app url",
     "Appearance": "Appearance",
     "Apr": "Apr",
     "Are you sure you want to delete the branches?": "Are you sure you want to delete the branches?",
+    "Are you sure you want to delete the brand ?": "Are you sure you want to delete the brand ?",
     "Are you sure you want to delete the canned reply?": "Are you sure you want to delete the canned reply?",
     "Are you sure you want to delete the department?": "Are you sure you want to delete the department?",
     "Are you sure you want to delete the label?": "Are you sure you want to delete the label?",
@@ -58,17 +60,23 @@
     "Back": "Back",
     "Background": "Background",
     "background": "background",
-    "Body": "Body",
     "body": "body",
+    "Body": "Body",
     "Branche": "Branche",
     "branches": "branches",
     "Branches": "Branches",
-    "Branches agents": "Branches agents",
     "branches agents": "branches agents",
+    "Branches agents": "Branches agents",
     "Branches details": "Branches details",
     "branches details": "branches details",
-    "Branches details and settings": "Branches details and settings",
     "branches details and settings": "branches details and settings",
+    "Branches details and settings": "Branches details and settings",
+    "Brand": "Brand",
+    "Brand details": "Brand details",
+    "Brand details and customization": "Brand details and customization",
+    "Brand for items": "Brand for items",
+    "brand_id": "brand_id",
+    "Brands": "Brands",
     "Can not delete a default role": "Can not delete a default role",
     "Can not edit your user from the user manager, go to your account page": "Can not edit your user from the user manager, go to your account page",
     "Can\\'t delete default language": "Can\\'t delete default language",
@@ -96,16 +104,20 @@
     "Confirm password": "Confirm password",
     "Confirm your new password": "Confirm your new password",
     "Confirmation of your account registration": "Confirmation of your account registration",
+    "count": "count",
     "Count": "Count",
     "Create account": "Create account",
     "Create branche": "Create branche",
-    "Create Branches": "Create Branches",
     "Create branches": "Create branches",
+    "Create Branches": "Create Branches",
+    "Create Brand": "Create Brand",
     "Create canned reply": "Create canned reply",
     "Create department": "Create department",
+    "Create Item": "Create Item",
     "Create label": "Create label",
     "Create language": "Create language",
     "Create Order": "Create Order",
+    "Create stock": "Create stock",
     "Create ticket": "Create ticket",
     "Create user": "Create user",
     "Create user role": "Create user role",
@@ -125,13 +137,15 @@
     "date locale": "date locale",
     "Dec": "Dec",
     "Default format for dates on the site": "Default format for dates on the site",
-    "Default role": "Default role",
     "default role": "default role",
+    "Default role": "Default role",
     "Define the description of the application to improve SEO positioning": "Define the description of the application to improve SEO positioning",
     "Define the keywords of the application to improve SEO positioning": "Define the keywords of the application to improve SEO positioning",
     "Define the title of the application\\' home page to improve SEO positioning": "Define the title of the application\\' home page to improve SEO positioning",
     "delete": "delete",
     "Delete branches": "Delete branches",
+    "Delete brand": "Delete brand",
+    "Delete Brand": "Delete Brand",
     "Delete canned reply": "Delete canned reply",
     "Delete department": "Delete department",
     "Delete label": "Delete label",
@@ -142,14 +156,16 @@
     "Delete tickets": "Delete tickets",
     "Delete user": "Delete user",
     "Delete user role": "Delete user role",
-    "Department": "Department",
     "department": "department",
+    "Department": "Department",
     "Department agents": "Department agents",
     "Department details": "Department details",
     "Department details and settings": "Department details and settings",
     "Departments": "Departments",
+    "Description": "Description",
     "description": "description",
     "Details": "Details",
+    "details": "details",
     "Discard": "Discard",
     "Do you already have access to your account?": "Do you already have access to your account?",
     "Do you already have an account?": "Do you already have an account?",
@@ -158,6 +174,8 @@
     "Drag and drop or click to replace": "Drag and drop or click to replace",
     "Edit branche": "Edit branche",
     "Edit branches": "Edit branches",
+    "Edit brand": "Edit brand",
+    "Edit Brand": "Edit Brand",
     "Edit canned reply": "Edit canned reply",
     "Edit department": "Edit department",
     "Edit label": "Edit label",
@@ -174,13 +192,13 @@
     "file": "file",
     "Filters": "Filters",
     "Forbidden": "Forbidden",
-    "force https": "force https",
     "Force HTTPS": "Force HTTPS",
+    "force https": "force https",
     "Force the loading of the site using HTTPS, to improve the security and SEO positioning of the site": "Force the loading of the site using HTTPS, to improve the security and SEO positioning of the site",
-    "From address": "From address",
     "from address": "from address",
-    "From name": "From name",
+    "From address": "From address",
     "from name": "from name",
+    "From name": "From name",
     "General": "General",
     "Go home": "Go home",
     "Hello!": "Hello!",
@@ -189,8 +207,8 @@
     "Hi": "Hi",
     "Home page title": "Home page title",
     "home title": "home title",
-    "Icon": "Icon",
     "icon": "icon",
+    "Icon": "Icon",
     "If the branches is public, it allows users to select this branches when creating the ticket, otherwise only agents can reassign to this branches": "If the branches is public, it allows users to select this branches when creating the ticket, otherwise only agents can reassign to this branches",
     "If the department is public, it allows users to select this department when creating the ticket, otherwise only agents can reassign to this department": "If the department is public, it allows users to select this department when creating the ticket, otherwise only agents can reassign to this department",
     "If you did not request a password reset, no further action is required": "If you did not request a password reset, no further action is required",
@@ -199,10 +217,14 @@
     "In order to view the order you have to log in with your email and password, if you do not remember the password, you can reset it using the email account that this message has reached": "In order to view the order you have to log in with your email and password, if you do not remember the password, you can reset it using the email account that this message has reached",
     "In order to view the ticket you have to log in with your email and password, if you do not remember the password, you can reset it using the email account that this message has reached": "In order to view the ticket you have to log in with your email and password, if you do not remember the password, you can reset it using the email account that this message has reached",
     "item": "item",
-    "Item": "Item",
+    "Item Brand": "Item Brand",
+    "Item details": "Item details",
     "Item Name": "Item Name",
+    "Item Quantity": "Item Quantity",
     "item_count": "item_count",
     "Items per page": "Items per page",
+    "items.*.quantity": "items.*.quantity",
+    "items.*.stock_id": "items.*.stock_id",
     "Jan": "Jan",
     "Jul": "Jul",
     "Jun": "Jun",
@@ -213,8 +235,8 @@
     "Label has been assigned to ticket": "Label has been assigned to ticket",
     "Labels": "Labels",
     "Language details": "Language details",
-    "Languages": "Languages",
     "languages": "languages",
+    "Languages": "Languages",
     "List of agents assigned to the branches": "List of agents assigned to the branches",
     "List of agents assigned to the department": "List of agents assigned to the department",
     "List of supported format can be found": "List of supported format can be found",
@@ -234,11 +256,12 @@
     "May": "May",
     "Meta description": "Meta description",
     "Meta keywords": "Meta keywords",
-    "My Orders": "My Orders",
     "My orders": "My orders",
+    "My Orders": "My Orders",
     "My tickets": "My tickets",
-    "name": "name",
     "Name": "Name",
+    "name": "name",
+    "New Item": "New Item",
     "New Order": "New Order",
     "New order": "New order",
     "New order assigned to branch": "New order assigned to branch",
@@ -262,7 +285,6 @@
     "options": "options",
     "order assigned to the selected agent": "order assigned to the selected agent",
     "order assigned to the selected department": "order assigned to the selected department",
-    "Order confirmed successfuly": "Order confirmed successfuly",
     "order created successfully": "order created successfully",
     "Order details": "Order details",
     "order priority has been changed": "order priority has been changed",
@@ -275,8 +297,8 @@
     "orders_statuses": "orders_statuses",
     "Outgoing mail": "Outgoing mail",
     "Outgoing mail method": "Outgoing mail method",
-    "Password": "Password",
     "password": "password",
+    "Password": "Password",
     "Password changed successfully": "Password changed successfully",
     "Pending orders": "Pending orders",
     "Permissions": "Permissions",
@@ -289,6 +311,8 @@
     "Priority": "Priority",
     "Priority details": "Priority details",
     "Priority details and customization": "Priority details and customization",
+    "Quantity": "Quantity",
+    "quantity": "quantity",
     "Quick action not found": "Quick action not found",
     "recaptcha enabled": "recaptcha enabled",
     "recaptcha private": "recaptcha private",
@@ -309,8 +333,8 @@
     "Return to back": "Return to back",
     "Return to orders list": "Return to orders list",
     "Return to tickets list": "Return to tickets list",
-    "role": "role",
     "Role": "Role",
+    "role": "role",
     "Role details": "Role details",
     "Role that is assigned to a user on the registration page": "Role that is assigned to a user on the registration page",
     "Save": "Save",
@@ -320,6 +344,7 @@
     "See order": "See order",
     "See ticket": "See ticket",
     "Select an option": "Select an option",
+    "Select Items": "Select Items",
     "Selected": "Selected",
     "Selected locale must be installed on the operating system": "Selected locale must be installed on the operating system",
     "Send": "Send",
@@ -352,11 +377,13 @@
     "Solved orders": "Solved orders",
     "Sort": "Sort",
     "Source text": "Source text",
-    "status": "status",
     "Status": "Status",
+    "status": "status",
     "Status details": "Status details",
     "Status details and customization": "Status details and customization",
     "Statuses": "Statuses",
+    "Stock": "Stock",
+    "Stock Items": "Stock Items",
     "strings": "strings",
     "subject": "subject",
     "Subject": "Subject",
@@ -391,10 +418,12 @@
     "The label has been added to selected orders": "The label has been added to selected orders",
     "The label has been added to selected tickets": "The label has been added to selected tickets",
     "The language files synchronization process has been started": "The language files synchronization process has been started",
+    "The Name": "The Name",
     "The new password can not be the same as the previous one": "The new password can not be the same as the previous one",
     "The password entered does not match the current password": "The password entered does not match the current password",
     "The priority of the selected orders has been changed": "The priority of the selected orders has been changed",
     "The priority of the selected tickets has been changed": "The priority of the selected tickets has been changed",
+    "The Quantity": "The Quantity",
     "The recovery token is incorrect or has already been used": "The recovery token is incorrect or has already been used",
     "The selected :attribute is invalid": "The selected :attribute is invalid",
     "The selected language does not exist": "The selected language does not exist",
@@ -439,6 +468,8 @@
     "Unassigned": "Unassigned",
     "Unauthorized": "Unauthorized",
     "Unsupported file type": "Unsupported file type",
+    "Update Item": "Update Item",
+    "Update stock": "Update stock",
     "Updated at": "Updated at",
     "User": "User",
     "User access and permission settings": "User access and permission settings",
@@ -449,8 +480,8 @@
     "user registration": "user registration",
     "User registration is disabled": "User registration is disabled",
     "User registration is enabled": "User registration is enabled",
-    "user roles": "user roles",
     "User roles": "User roles",
+    "user roles": "user roles",
     "User settings": "User settings",
     "Users": "Users",
     "Users will have access to the dashboard": "Users will have access to the dashboard",
