--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -573,7 +573,14 @@
     "Opened Orders": " الطلبات المفتوحة",
     "Opened Tickets": "التذاكر المفتوحة",
     "Pending Orders": "الطلبات المعلقة",
+    "Conversation": "المحادثة",
+    "We are here to help! Submit a ticket and we will get back to you.": "نحن هنا لمساعدتك! قم بإرسال تذكرة وسنتواصل معك.",
+    "Brief summary of your issue": "ملخص بسيط لمشكلتك",
+    "Please describe the issue in detail.": "الرجاء وصف المشكلة بالتفصيل.",
+    "Submit Ticket": "إرسال التذكرة",
     "Delivered Orders": "الطلبات المسلمة",
+    "This ticket is closed": "هذا التذكرة مغلقة",
+    "You cannot reply to this ticket because it has been closed.": "لا يمكنك الرد على هذه التذكرة لأنها مغلقة.",
     "Orders (Last 12 Months)": "الطلبات (آخر 12 شهر)",
     "Registered Users (Last 12 Months)": "المستخدمين المسجلين (آخر 12 شهر)",
     "Assign Agent (Optional)": "تعيين وكيل (اختياري)",
