--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -571,9 +571,13 @@
     "Enter ticket subject": "أدخل موضوع التذكرة",
     "Create Ticket": "إنشاء تذكرة",
     "Opened Orders": " الطلبات المفتوحة",
+    "Last Update": "آخر تحديث",
     "Opened Tickets": "التذاكر المفتوحة",
     "Pending Orders": "الطلبات المعلقة",
     "Conversation": "المحادثة",
+    "Order Completed": "الطلب مكتمل",
+    "This order has been completed/delivered. Replies are disabled.": "تم الانتهاء من الطلب. الردود مغلقة.",
+    "Message": "الرسالة",
     "We are here to help! Submit a ticket and we will get back to you.": "نحن هنا لمساعدتك! قم بإرسال تذكرة وسنتواصل معك.",
     "Brief summary of your issue": "ملخص بسيط لمشكلتك",
     "Please describe the issue in detail.": "الرجاء وصف المشكلة بالتفصيل.",
