--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -585,6 +585,15 @@
     "Delivered Orders": "الطلبات المسلمة",
     "This ticket is closed": "هذا التذكرة مغلقة",
     "You cannot reply to this ticket because it has been closed.": "لا يمكنك الرد على هذه التذكرة لأنها مغلقة.",
+    "Mister Brander": "مستر براندر",
+    "Integrated platform connecting commercial brands with professional content creators to execute effective marketing campaigns.": "منصة متكاملة تربط العلامات التجارية مع صناع المحتوى المحترفين لتنفيذ حملات تسويقية فعالة",
+    "Welcome back! Login to your account": "تسجيل الدخول",
+    "Welcome back! Log in to your account to get access to your dashboard.": "مرحباً بك مرة أخرى! سجل دخولك للوصول إلى حسابك",
+    "Don't have an account? Sign up": "ليس لديك حساب؟ إنشاء حساب جديد",
+    "Or": "أو",
+    "Sign in with Google": "التسجيل بواسطة Google",
+    "Sign in with Facebook": "التسجيل بواسطة Facebook",
+    "Sign in with Apple": "التسجيل بواسطة Apple",
     "Orders (Last 12 Months)": "الطلبات (آخر 12 شهر)",
     "Registered Users (Last 12 Months)": "المستخدمين المسجلين (آخر 12 شهر)",
     "Assign Agent (Optional)": "تعيين وكيل (اختياري)",
